[metadata]
name = mri-normalization-tools
version = 0.3.0
author = ML, Wong
author_email = nil
license = MIT
description =
url =
classifiers =
    Development Status :: WIP
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed


[options]
packages = find:
install_requires =
    SimpleITK >= 2.1.0
    networkx >= 2.5
    decorator >= 5.0.7
    cachetools >=4.2.2
    netgraph >= 4.0.5
    pyyaml >= 5.3.1
    tqdm >= 4.0.0
    pandas >= 1.3.5
    rich >= 13.0
    rich-tools >= 0.5.1
    click >= 8.0.0

[options.extras_require]
dicom =
    pydicom
    pydicom-seg

[options.entry_points]
console_scripts =
    mnts-train = mnts.scripts.normalization:run_graph_train
    mnts-infer = mnts.scripts.normalization:run_graph_inference
    mnts-dicom2nii = mnts.scripts.dicom2nii:console_entry
    mnts-organize = mnts.scripts.organize_nifti:console_entry

[bdist_wheel]
universal = 1